public/assets/css/style.css
/* ... */
.hover-listing-image .wrap-hover-listing .listing-item .images .overlay-limit {
  text-align: center;
  position: absolute;
  width: 100%;
  top: 0;
  bottom: 0;
  color: #fff;
  background-color: rgba(0, 0, 0, 0.6);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  z-index: 55;
}
.hover-listing-image
  .wrap-hover-listing
  .listing-item
  .images
  .overlay-limit
  img {
  width: 54px !important;
  height: 65px !important;
  background: unset !important;
}
.hover-listing-image
  .wrap-hover-listing
  .listing-item
  .images
  .overlay-limit
  p {
  font-size: 20px;
  color: #fff;
  font-weight: 500;
}
.hover-listing-image .wrap-hover-listing .listing-item.active .images {
  opacity: 1;
  z-index: -2;
  transition: all 0, 3s;
}
.hover-listing-image .wrap-hover-listing .listing-item.active .images img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}
.hover-listing-image .wrap-hover-listing .view-gallery {
  cursor: pointer;
}
.hover-listing-image .wrap-hover-listing .bullet-hover-listing {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 3px;
  display: flex;
  justify-content: space-between;
}
.hover-listing-image .wrap-hover-listing .bullet-hover-listing .bl-item {
  width: 100%;
  height: 4px;
  background-color: #86898e;
  z-index: 25;
  margin-right: 6px;
}
.hover-listing-image
  .wrap-hover-listing
  .bullet-hover-listing
  .bl-item:last-child {
  margin-right: 0;
}
.hover-listing-image .wrap-hover-listing .bullet-hover-listing .bl-item.active {
  background: #d01818;
}

.tf-car-service {
  border-radius: 10px;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: 0px 6px 27px 0px rgba(0, 0, 0, 0.07);
}
.tf-car-service .image {
  overflow: hidden;
  position: relative;
  height: 250px;
}
.tf-car-service .image .stm-badge-top {
  position: absolute;
  top: 16px;
  right: 14px;
  left: 14px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 10;
}
.tf-car-service .image .stm-badge-top .feature {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.tf-car-service .image .stm-badge-top .feature span {
  padding: 9px 20px;
  background-color: #d01818;
  font-size: 15px;
  font-weight: 500;
  line-height: 15px;
  color: #ffffff;
  border-radius: 6px;
  margin-right: 10px;
}
.tf-car-service .image .stm-badge-top .feature .cut {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.81);
  padding: 5px;
  border-radius: 2px;
}
.tf-car-service .image .stm-badge-top .feature .cut p {
  font-size: 16px;
  font-weight: 500;
  color: #ffffff;
  line-height: 20px;
  margin-left: 6px;
}
.tf-car-service .image .stm-badge-top > span {
  padding: 9px 20px;
  background-color: #d01818;
  font-size: 15px;
  font-weight: 500;
  line-height: 15px;
  color: #ffffff;
  border-radius: 3px;
}
.tf-car-service .image .listing-images {
  position: relative;
  border-radius: 8px 8px 0px 0px;
  overflow: hidden;
  height: 250px;
}
.tf-car-service .content {
  padding: 10px 20px;
  text-align: left;
}
.tf-car-service .content .sub-title {
  display: inline-block;
  font-size: 14px;
  font-weight: 500;
  line-height: 17.64px;
  color: #d01818;
}
.tf-car-service .content .price {
  font-size: 15px;
  font-weight: 600;
  line-height: 18.9px;
  color: #d01818;
}
.tf-car-service .content .description ul {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  border-bottom: 1px solid #efefef;
  padding: 10px 0px;
}
.tf-car-service .content .description ul li.listing-information {
  position: relative;
  display: flex;
}
.tf-car-service
  .content
  .description
  ul
  li.listing-information:not(:last-child) {
  margin-right: 23px;
}
.tf-car-service
  .content
  .description
  ul
  li.listing-information:not(:last-child)::after {
  width: 1px;
  height: 26px;
  background-color: #d9d9d9;
  content: "";
  position: absolute;
  right: -15%;
  top: 50%;
  transform: translateY(-50%);
}
.tf-car-service .content .description ul li.listing-information i {
  color: #000000;
  margin-right: 16px;
  margin-top: 10px;
  font-size: 17px;
}
.tf-car-service .content .description ul li.listing-information .inner span {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  color: #a2a4a8;
}
.tf-car-service .content .description ul li.listing-information .inner p {
  font-size: 12px;
  font-weight: 500;
  line-height: 20px;
  color: #000000;
}
.tf-car-service .content .bottom-btn-wrap {
  margin-top: 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 12px;
}
.tf-car-service .content .bottom-btn-wrap .btn-read-more .more-link {
  letter-spacing: 0.05em;
}
.tf-car-service .content .bottom-btn-wrap .btn-read-more .more-link i {
  color: #d01818;
  margin-right: 12px;
}
.tf-car-service .content .bottom-btn-wrap .price-wrap {
  display: flex;
  align-items: center;
  gap: 12px;
}
.tf-car-service .content .bottom-btn-wrap .price-wrap .price-sale {
  font-size: 20px;
  font-weight: 600;
  line-height: 25.2px;
  color: #d01818;
}
.tf-car-service .content .bottom-btn-wrap .price-wrap .price {
  font-size: 18px;
  font-weight: 500;
  line-height: 22.68px;
  color: #86898e;
  text-decoration-line: line-through;
}
.tf-car-service .content .bottom-btn-wrap .btn-group .icon-service {
  padding: 14px;
  border-radius: 3px;
  background: #f2f6f7;
}

.icon-service {
  background: white;
  padding: 10px;
  border-radius: 100%;
  font-size: 20px;
}

.icon-service:first-child {
  margin-right: 10px;
}
.tf-car-service .content .bottom-btn-wrap .btn-group .icon-service:hover {
  background-color: #d01818;
  transition: all 0.5s;
}
.tf-car-service .content .bottom-btn-wrap .btn-group .icon-service:hover i {
  color: #ffffff !important;
}
.tf-car-service
  .content
  .bottom-btn-wrap
  .btn-group
  .icon-service:not(:last-child) {
  margin-right: 10px;
}
/* ... */

